Adds mailchimp signup

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,10 +18,7 @@ title: Open Guilds
     </p>
 
     <section class="signup">
-      <form>
-        <input type="text" placeholder='your-email@something.com'></input>
-        <button class="button">Sign Up</button>
-      </form>
+      <%= partial 'signup' %>
     </section>
   </section>
 
