--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -43,7 +43,7 @@ title: Open Guilds
     </p>
 
     <p>
-      Guilds are only limited by the number of members. No more overhead, members are
+      Guilds are only limited by the number of members they can attract. No more overhead, members are
       rewarded directly based on the merit of their work done. Guilds can process one
       task a day, or thousands, the only limit is the guild's total membership.
     </p>
