Adds TT Commons font and new copy

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,12 +9,13 @@ title: Open Guilds
     <li>Sign in</li>
   </ul>
 </nav>
+
 <section class="main">
   <section class="header">
-    <h1>Create High Quality, Infinitely Scalable Organizations</h1>
+    <h1>Crowdsource digital tasks to a community you create</h1>
     <p>
-      OpenGuilds helps people build crowdsourced organizations that can 
-      automatically scale to thousands of individuals.
+      OpenGuilds is a platform to build crowdsourced organizations that can 
+      scale to thousands of individuals.
     </p>
 
     <section class="signup">
@@ -24,24 +25,20 @@ title: Open Guilds
 
 
   <section class="flexible-organizations">
-    <h2>Crowdsource a Workforce to Match Your Ambitions</h2>
+    <h2>Crowdsource a Workforce of Your Control</h2>
+    <strong>
+      Guilds are created with a transparent constitution of your creation.
+    </strong>
     <p>
-      Guilds are created by entrepreneurs who set the rewards for workers contributions.
-    </p>
-
-    <p>
-      Skilled workers join guilds, gain qualifications, and are rewarded for their work.
-    </p>
-  </section>
-
-  <section class="guild-creation">
-    <h2>Entrepreneurs Create Guilds</h2>
-    <p>
-      Guilds are established with a set of transparent rules, written into a guilds
+      Guilds are established with a set of transparent rules, written into a guild's
       constitution. The constitution outlines how workers are onboarded or promoted,
       how rewards are distributed, and how the rules themselves can be changed.
     </p>
 
+
+    <strong>
+      Skilled workers join guilds, gain qualifications, and are rewarded for their work.
+    </strong>
     <p>
       Guilds are only limited by the number of members they can attract. No more overhead, members are
       rewarded directly based on the merit of their work done. Guilds can process one
@@ -94,17 +91,16 @@ title: Open Guilds
 
   <section class="unscalable">
     <h2>Use Open Guilds to Scale the Unscalable</h2>
-    <strong>See how different groups can use OpenGuilds to solve big challenges:</strong>
+    <p>See how different groups can use OpenGuilds to solve big challenges:</p>
     <section class="ideas">
       <%= partial 'ideas' %>
     </section>
   </section>
 
-  <section class="internet-of-people">
-    <h4>
-      <strong>The new internet of people</strong> as an engine for change.
-      Open guilds helps you codify the processes.
-      We do the advanced engineering so you can focus on solving your big problems.
-    </h4>
+  <section class="signup">
+    <%= partial 'signup' %>
   </section>
 </section>
+
+<footer>
+</footer>
