--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -5,10 +5,7 @@
 body {
   background-color: $background-color;
   color: $base-font-color;
-  font-family: -apple-system, BlinkMacSystemFont, "Avenir Next", "Avenir",
-    "Segoe UI", "Lucida Grande", "Helvetica Neue", "Helvetica", "Fira Sans",
-    "Roboto", "Noto", "Droid Sans", "Cantarell", "Oxygen", "Ubuntu",
-    "Franklin Gothic Medium", "Century Gothic", "Liberation Sans", sans-serif;
+  font-family: "TTCommons", -apple-system, sans-serif;
   margin: 0;
   padding: 0;
   max-width: 100%;
@@ -38,7 +35,7 @@ nav.navigation {
     li.logo {
       margin-left: $small-spacing;
       margin-right: auto;
-      font-weight: bold;
+      font-weight: 500;
     }
   }
 }
@@ -55,10 +52,14 @@ section.header {
   flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
+  margin: 0 $small-spacing;
+
+  section.signup {
+    width: 100%;
+  }
 }
 
 section.signup {
-  width: 100%;
   margin: $base-spacing;
 }
 
@@ -69,5 +70,12 @@ section.work,
 section.rewards,
 section.unscalable,
 section.internet-of-people {
-  margin: 15vh 0;
+  margin: 15vh $small-spacing;
+}
+
+footer {
+  margin-top: $base-spacing * 3;
+  height: 25vh;
+  background-color: darken($primary-color, 10);
+  width: 100%;
 }
