Removes extra CNAME line and clips copy for ideas

--- a/source/_ideas.html.erb
+++ b/source/_ideas.html.erb
@@ -3,8 +3,7 @@
     header: 'Non-Profits',
     copy: "Non-profits can pair refugees from all over the world with documents 
             that need to be translated. Help people learn their native language 
-            and check each others work while earning a living without the stress 
-            and connections required to find local employment."
+            and check each others work while earning a living"
     }
 %>
 
@@ -14,8 +13,8 @@
     locals: {
     header: "Government Organizations and NGO's",
     copy: "Governments can use a guilds network during times of crisis to
-            identify issues on the ground in hard to reach zones that still
-            maintain mobile networks. NGO's are able to get valuable data
+            identify issues on the ground in areas that still
+            have mobile networks. NGO's are able to get valuable data
             from tougher economic zones where cellphone penetration but lacks
             other infrastructure for effective surveying."
     }
@@ -51,7 +50,7 @@
     locals: {
     header: 'Everyone',
     copy: "Everyone can use a guild to perform meaningful work online with others.
-            Even those outside of the normal economic opportunity can do meaningful
+            Even those outside of the normal economic opportunity can do 
             work and provide for themselves with nothing but a cellphone and
             internet connection."
     }
