Adds first logo version

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,7 +3,7 @@ title: Open Guilds
 ---
 <nav class="navigation">
   <ul>
-    <li class="logo">OpenGuilds</li>
+    <li class="logo"><%=image_tag "open-guilds-logo.png" %>penGuilds</li>
     <li>Wiki</li>
     <li>Sign up</li>
     <li>Sign in</li>
