--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -50,6 +50,15 @@ nav.navigation {
         margin-right: 0;
         margin-bottom: 5px;
       }
+
+      @media screen and (max-width: 700px) {
+        margin-left: 0;
+        font-size: 1.25em;
+
+        img {
+          height: 36px;
+        }
+      }
     }
   }
 }
