Adds site verification for google

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -5,6 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="google-site-verification" content="L1Th2bBm_Qn4xBl6uIn4hON0ezm-W1FAa4ELWYzWezY" />
     <!-- Use the title from a page's frontmatter if it has one -->
     <title><%= current_page.data.title || "Middleman" %></title>
     <%= stylesheet_link_tag "site" %>
