Adds live links to the landing page

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,9 +4,9 @@ title: Open Guilds
 <nav class="navigation">
   <ul>
     <li class="logo"><%=image_tag "open-guilds-logo.png" %>penGuilds</li>
-    <li>Wiki</li>
-    <li>Sign up</li>
-    <li>Sign in</li>
+    <li><%= link_to 'Docs', 'https://docs.openguilds.com' %></li>
+    <li><%= link_to 'Sign up', 'https://dashboard.openguilds.com/users/sign_up' %></li>
+    <li><%= link_to 'Sign in', 'https://dashboard.openguilds.com/users/sign_in' %></li>
   </ul>
 </nav>
 
