--- a/source/stylesheets/_typography.scss
+++ b/source/stylesheets/_typography.scss
@@ -2,6 +2,15 @@ $font-path: '../fonts/' !default;
 
 @font-face {
    font-family: 'TTCommons';
+      src: url('#{$font-path}TT-Commons-Bold.otf');
+      src: url('#{$font-path}TT-Commons-Bold.ttf') format('truetype'),
+           url('#{$font-path}TT-Commons-Bold.otf') format('otf');
+   font-weight: 600;
+   font-style: bold;
+}
+
+@font-face {
+   font-family: 'TTCommons';
       src: url('#{$font-path}TT-Commons-Medium.otf');
       src: url('#{$font-path}TT-Commons-Medium.ttf') format('truetype'),
            url('#{$font-path}TT-Commons-Medium.otf') format('otf');
@@ -26,7 +35,8 @@ h1, h2, h3, h4, h5 {
 
 h1 {
   font-size: 2.75em;
-  font-weight: 500;
+  font-weight: 700;
+  font-style: bold;
 }
 
 h2 {
@@ -46,13 +56,4 @@ p {
   margin-bottom: $small-spacing;
   margin-top: 0;
   font-weight: 200;
-}
-
-strong {
-  color: darken($primary-color, 25%);
-  font-size: 1.25em;
-  font-weight: 500;
-  margin-bottom: $small-spacing;
-  display: block;
-  line-height: 1.75;
 }
