--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -13,6 +13,8 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   </head>
   <body>
+    <%= partial 'navigation' %>
     <%= yield %>
+    <%= partial 'footer' %>
   </body>
 </html>
