Adds proper page titles

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,7 +7,7 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="google-site-verification" content="L1Th2bBm_Qn4xBl6uIn4hON0ezm-W1FAa4ELWYzWezY" />
     <!-- Use the title from a page's frontmatter if it has one -->
-    <title><%= current_page.data.title || "Middleman" %></title>
+    <title><%= current_page.data.title || "Open Guilds" %></title>
     <%= stylesheet_link_tag "site" %>
     <%= javascript_include_tag "site" %>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
