--- a/source/privacy.html.erb
+++ b/source/privacy.html.erb
@@ -1,3 +1,7 @@
+---
+title: Privacy Policy - OpenGuilds
+---
+
 <section class="privacy-policy">
   <h1>Privacy Policy</h1>
   <%= link_to 'Back', uri_root_path, class: 'secondary-button' %>
