--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -25,17 +25,6 @@ li {
   }
 }
 
-section.privacy-policy {
-  @extend.card;
-  position: relative;
-
-  .secondary-button {
-    position: absolute;
-    top: $base-spacing;
-    right: $base-spacing;
-  }
-}
-
 section.call-to-action {
   @extend.card;
   display: flex;
@@ -45,14 +34,28 @@ section.call-to-action {
   min-height: 25vh;
 }
 
-section.terms-and-conditions {
+section.terms-and-conditions, section.privacy-policy {
   @extend.card;
   position: relative;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
 
   .secondary-button {
-    position: absolute;
-    top: $base-spacing;
-    right: $base-spacing;
+    position: relative;
+    margin-bottom: $base-spacing;
+    margin-right: auto;
+    margin-left: 0;
+  }
+
+  @media screen and (min-width: $large-screen) {
+    .secondary-button {
+      position: absolute;
+      top: $base-spacing;
+      right: $base-spacing;
+      margin-bottom: 0;
+    }
   }
 }
 
@@ -100,7 +103,8 @@ a, strong {
 }
 
 nav.navigation {
-  border-bottom: 2px solid $primary-color;
+  background-color: white;
+  border-bottom: 1px solid $primary-color;
   border-color: $primary-color;
   color: $primary-color;
   display: block;
@@ -116,6 +120,7 @@ nav.navigation {
     list-style: none;
 
     li {
+      margin: ($small-spacing / 2) 0;
       margin-right: $small-spacing;
     }
 
@@ -244,12 +249,23 @@ section.links {
   display: flex;
   margin-top: $base-spacing;
   margin-bottom: $base-spacing;
-  flex-flow: row nowrap;
+  flex-flow: column nowrap;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
 
   a {
     margin: 0 $small-spacing;
+    margin-bottom: $base-spacing;
+  }
+
+  @media screen and (min-width: $large-screen) {
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-around;
+
+    a {
+      margin-bottom: 0;
+    }
   }
 }
 
@@ -275,7 +291,7 @@ footer {
     padding-inline-start: 0px;
 
     li {
-      margin-bottom: $small-spacing;
+      margin-bottom: 0;
 
       a {
         text-decoration: none;
