Fixes buttons for mobile

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,8 +7,8 @@ title: Open Guilds
   <section id="hero">
     <section class="copy">
       <h1>
-      Create digital on-demand
-      workforces that transform your data for rewards.
+        Create on-demand workforces 
+        that work together to transform your data for rewards.
       </h1>
 
       <p>
@@ -18,9 +18,9 @@ title: Open Guilds
     </section>
 
     <section class="links">
-      <%= link_to 'Sign Up', 'https://dashboard.openguilds.com/users/sign_up/', class: 'primary-button' %>
-      <%= link_to 'How does it work?', '#first-segment', class: 'secondary-button' %>
-      <%= link_to 'Sign In', 'https://dashboard.openguilds.com/users/sign_in/', class: 'secondary-button' %>
+      <%= link_to 'Sign Up', 'https://dashboard.openguilds.com/users/sign_up/', class: 'primary-button first' %>
+      <%= link_to 'Learn More', '#first-segment', class: 'secondary-button middle' %>
+      <%= link_to 'Sign In', 'https://dashboard.openguilds.com/users/sign_in/', class: 'secondary-button last' %>
 
     </section>
   </section>
@@ -97,8 +97,8 @@ title: Open Guilds
     <h2>Wanna give it a try?</h2>
     <p>Its totally free to get started!</p>
     <section class="links">
-      <%= link_to 'Sign Up', 'https://dashboard.openguilds.com/users/sign_up/', class: 'primary-button' %>
-      <%= link_to 'Sign In', 'https://dashboard.openguilds.com/users/sign_in/', class: 'secondary-button' %>
+      <%= link_to 'Sign Up', 'https://dashboard.openguilds.com/users/sign_up/', class: 'primary-button first' %>
+      <%= link_to 'Sign In', 'https://dashboard.openguilds.com/users/sign_in/', class: 'secondary-button last' %>
     </section>
   </section>
 </section>
