--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -2,6 +2,8 @@
 @import 'typography';
 @import 'forms';
 
+$base-border: 1px solid $primary-color;
+
 li {
   margin: ($base-spacing / 2) 0;
   font-size: 1.15em;
@@ -17,7 +19,7 @@ li {
   display: block;
   margin: $base-spacing auto;
   background-color: white;
-  border-radius: 3px;
+  border-radius: $base-border-radius;
   box-shadow: ($small-spacing / 2) ($small-spacing / 2) 0px lighten($primary-color, 45%);
 
   @media screen and (min-width: $large-screen) {
@@ -32,6 +34,13 @@ section.call-to-action {
   align-items: center;
   justify-content: center;
   min-height: 25vh;
+
+  section.links {
+    a {
+      margin-bottom: 0;
+      line-height: 24px;
+    }
+  }
 }
 
 section.terms-and-conditions, section.privacy-policy {
@@ -144,7 +153,7 @@ nav.navigation {
       }
 
       @media screen and (max-width: 700px) {
-        margin-left: 0;
+        margin-left: $small-spacing;
         font-size: 1.25em;
 
         img {
@@ -227,16 +236,33 @@ section.segment {
 }
 
 section#hero {
-  margin-bottom: 15vh !important;
+  margin-bottom: 0 !important;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-  margin: $base-spacing 0;
+  margin: 0;
   margin-bottom: $base-spacing * 2;
+
+  section.links {
+    margin-top: 0;
+    margin-bottom: 0;
+
+    a {
+      margin-bottom: 0;
+      line-height: 24px;
+    }
+  }
 
   section.copy {
     @extend.card;
+    margin-top: $small-spacing;
+    margin-bottom: $base-spacing;
+
+    h1 {
+      font-size: 2em;
+      line-height: 1.5;
+    }
   }
 
 
@@ -249,13 +275,32 @@ section.links {
   display: flex;
   margin-top: $base-spacing;
   margin-bottom: $base-spacing;
-  flex-flow: column nowrap;
+  flex-flow: row nowrap;
   align-items: center;
   justify-content: center;
 
   a {
-    margin: 0 $small-spacing;
+    margin: 0;
     margin-bottom: $base-spacing;
+    width: 25%;
+    height: 48px;
+    border: $base-border;
+  }
+
+  a.first {
+    border-radius: $base-border-radius 0 0 $base-border-radius;
+  }
+
+  a.middle {
+    border-radius: 0;
+    border-left: 0;
+    border-right: $base-border;
+  }
+
+  a.last {
+    border-radius: 0 $base-border-radius $base-border-radius 0;
+    border-left: 0;
+    border-right: $base-border;
   }
 
   @media screen and (min-width: $large-screen) {
@@ -264,7 +309,18 @@ section.links {
     justify-content: space-around;
 
     a {
-      margin-bottom: 0;
+      margin: $small-spacing;
+      border: $base-border;
+      height: auto;
+      width: auto;
+    }
+
+    a.middle {
+      border-left: $base-border;
+    }
+
+    a.last {
+      border-left: $base-border;
     }
   }
 }
