--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -7,6 +7,7 @@ $base-border-radius: 3px;
 // Colors
 $primary-color: #673ab7;
 $background-color: #fdfdfd;
+$secondary-color: #069647;
 
 // Navigation
 $navigation-height: 72px;
