--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,22 +7,22 @@ title: Open Guilds
   <section id="hero">
     <section class="copy">
       <h1>
-        Create on-demand workforces 
-        that work together to transform your data for rewards.
+        Create scalable on-demand workforces that transform data for rewards.
       </h1>
 
       <p>
       OpenGuilds helps you build and manage online organizations that perform work
       for rewards you set.
       </p>
+
+      <section class="links">
+        <%= link_to 'Sign Up', 'https://dashboard.openguilds.com/users/sign_up/', class: 'primary-button first' %>
+        <%= link_to 'Learn More', '#first-segment', class: 'secondary-button middle' %>
+        <%= link_to 'Sign In', 'https://dashboard.openguilds.com/users/sign_in/', class: 'secondary-button last' %>
+      </section>
+
     </section>
 
-    <section class="links">
-      <%= link_to 'Sign Up', 'https://dashboard.openguilds.com/users/sign_up/', class: 'primary-button first' %>
-      <%= link_to 'Learn More', '#first-segment', class: 'secondary-button middle' %>
-      <%= link_to 'Sign In', 'https://dashboard.openguilds.com/users/sign_in/', class: 'secondary-button last' %>
-
-    </section>
   </section>
 
   <section id="first-segment" class="segment">
